vlib/v/checker/tests/use_deprecated_function_warning.vv
[deprecated]
fn xyz() {
	println('hi')
}

[deprecated: 'use foo2 instead']
fn abc() {
	println('hi')
}

fn main() {
	xyz()
	abc()
}

struct S1 {}

[deprecated: 'use bar instead']
fn (s S1) m() {}

fn method() {
	s := S1{}
	s.m()
}
